--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
-name: GitHub Actions Demo
+name: Actions
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  continuous-integration:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
