--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+attrs==21.4.0
 autopep8==1.6.0
 click==8.0.3
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.8.0
+pyparsing==3.0.7
+pytest==7.0.0
 six==1.16.0
 SQLAlchemy==1.4.31
 toml==0.10.2
+tomli==2.0.0
 Werkzeug==2.0.2
